# autocart

./: README.md
.github/workflows/: static.yml
MainDevelopment/: README.md
MainDevelopment/LocalizationSystem/: Real_Approx.m  fast_map.m  manual_map.m
MainDevelopment/MappingSystem/: 19thjantest2_filtered.txt  CountRev2.m  Real_Approx.asv  Real_Approx.m  Static_pos.m
MainDevelopment/MappingSystem/RustMapLocalization/: Cargo.toml
MainDevelopment/MappingSystem/RustMapLocalization/src/: get_points_from_file.rs  main.rs  make_test_data.rs
MainDevelopment/MappingSystem/RustMapLocalization/tests/: test_socket.py
MainDevelopment/ObjectAvoidanceSystem/: README.md
Source Codes/Motors-Prototype/: button_config.c  calculations.c  calculations.h  common.h  direction_config.c  direction_config.h  encoder_interrputs.c  encoder_interrputs.h  interrupt_stub.c  interrupt_stub.h  led.h  main.c  motors_control.c  motors_control.h  pin_config.c  pin_config.h  pwm_config.c  pwm_config.h  pwm_control.h  sensors_stub.c  sensors_stub.h  spi_setup.c  spi_setup.h
Source Codes/SPI-KL25Z/: led.c  led.h  main.c  rx_queue.c  spi_setup.c  spi_setup.h
Source Codes/SPI-Prototype/: rx_queue.h  spi_setup.c  spi_setup.h
Source Codes/SPI-RPI/: README.md
Source Codes/Socket/: main.cpp  simplesocket.py
Source Codes/Ultrasonic/: MultiSensor.uvguix.kdMot  MultiSensor.uvoptx  MultiSensor.uvprojx
SourceCodes/I2C/: i2ctest.py
SourceCodes/SPI-KL25Z/: led.c
SourceCodes/SPI-RPI/: rpi-socket-spi.py  socket.cpp  spitest.py
useful-files/: command-to-txt  result.txt
(+191 files in other folders)
