[package]
name = "rust_map_localization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bytemuck = "1.15.0"
itertools = "0.12.1"
parry2d = { version = "0.13.6", features = ["serde-serialize"] }
plotters = "0.3.5"
rand = "0.8.5"
serde = "1.0.197"
serde-big-array = "0.5.1"
